--- a/README
+++ b/README
@@ -2,7 +2,7 @@
 PALMS: Data Partition and Automatic LibSVM Model Selection
 ==========================================================
 
-PALMS is a tool for easy partitioning of data in LibSVM format so that it can be used for automatic selection of the best possible parameters of an SVM classifier built upon this data. PALMS has two functioning modes: basic and advanced. In basic mode, data from all classes, bening and malicious, is used on training, validation and testing. In advanced mode, malicious data belonging to different classes is used on training, validation and testing.
+PALMS is a tool for easy partitioning of data in LibSVM format so that it can be used for automatic selection of the best possible parameters of an SVM classifier built upon this data. PALMS has two functioning modes: basic and advanced. In basic mode, data from all classes, benign and malicious, is used on training, validation and testing. In advanced mode, malicious data belonging to different classes is used on training, validation and testing.
 
 The following are two examples of use:
  
